Renombrar archivos para mejorar consistencia:

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube</title>
-    <link rel="stylesheet" href="styleyoutube.css">
+    <link rel="stylesheet" href="styles.css">
     <link  rel="shortcut icon" href="iconyoutube.png" type="image/x-icon" class="iconyoutube">
 </head>
 <body>
