--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube</title>
     <link rel="stylesheet" href="styles.css">
-    <link  rel="shortcut icon" href="iconyoutube.png" type="image/x-icon" class="iconyoutube">
+    <link  rel="shortcut icon" href="/Proyecto-youtube-/assets/iconyoutube.png" type="image/x-icon" class="iconyoutube">
 </head>
 <body>
     <header class="header">
